--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,11 @@
     text-align: center;
     font-size: 18px;
     color:white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #Name{
     font-size: 30px;
+    font-family: cursive;
 }
 .jumbotron{
     background-color: black;
